# codesynapse

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GROWTH.md  LICENSE  README.md  TELEMETRY.md  codesynapse.toml  flake.nix  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
assets/: demo.tape
codesynapse-cli/: Cargo.toml
codesynapse-cli/src/: cli.rs  main.rs  ui.rs
codesynapse-core/: Cargo.toml
codesynapse-core/benches/: extraction.rs  query.rs
codesynapse-core/src/: affected.rs  analyze.rs  benchmark.rs  build.rs  cache.rs  callflow_html.rs  chunking.rs  cluster.rs  config.rs  dedup.rs  detect.rs  diagnostics.rs  embed_pipeline.rs  embedding.rs  error.rs  export.rs  extract.rs  global_graph.rs  google_workspace.rs  graph.rs  hooks.rs  hypergraph.rs  import_extension.rs  incremental.rs  ingest.rs  js_import_resolution.rs  lib.rs  llm_backends.rs  llm_extract.rs  multigraph_compat.rs  prs.rs  python_import_resolution.rs  query.rs  report.rs  scip_ingest.rs  security.rs  semantic_cleanup.rs  serve_query.rs  symbol_resolution.rs  telemetry.rs  (+6 more)
codesynapse-core/src/ts_extract/: astro.rs  bash.rs  c.rs  cmake.rs  cpp.rs  csharp.rs  csproj.rs  dart.rs  dm.rs  elixir.rs  fortran.rs  go.rs  groovy.rs  haskell.rs  java.rs  javascript.rs  json_package.rs  julia.rs  kotlin.rs  lua.rs  markdown.rs  mcp_config.rs  mod.rs  objc.rs  pascal.rs  php.rs  powershell.rs  python.rs  racket.rs  razor.rs  ruby.rs  rust.rs  scala.rs  sln.rs  sql.rs  svelte.rs  swift.rs  typescript.rs  verilog.rs  vue.rs  (+1 more)
codesynapse-core/tests/: pipeline.rs  stress.rs
codesynapse-graphql/: Cargo.toml
codesynapse-graphql/src/: lib.rs  schema.rs  state.rs
codesynapse-grpc/: Cargo.toml  build.rs
codesynapse-grpc/proto/: codesynapse.proto
codesynapse-grpc/src/: event_bus.rs  lib.rs  service.rs  state.rs
codesynapse-mcp/: Cargo.toml
codesynapse-mcp/src/: mcp.rs
codesynapse-serve/: Cargo.toml
codesynapse-serve/src/: context.rs  graph_query.rs  lib.rs  server.rs
codesynapse-tui/: Cargo.toml
codesynapse-tui/src/: lib.rs  main.rs  ui.rs
codesynapse-wasm/: Cargo.toml
codesynapse-wasm/demo/: index.html
codesynapse-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  INDEX.md  MCP-TOOLS.md
integrations/: README.md
integrations/claude-code/skills/codesynapse-cli/: SKILL.md
integrations/claude-code/skills/codesynapse-cli/references/: commands.md
integrations/cursor/rules/: codesynapse-cli.mdc
pi/: README.md  package-lock.json  package.json  tsconfig.json
pi/evals/: extension.test.ts  mcp-integration.test.ts
pi/src/: extension.ts
site/: astro.config.mjs  package-lock.json  package.json
site/src/lib/: github.ts
site/src/pages/: index.astro
tests/fixtures/corpus-full/cpp/: models.cpp  server.cpp
tests/fixtures/corpus-full/go/: auth.go  db.go  main.go  models.go  services.go
tests/fixtures/corpus-full/java/: Database.java  Main.java  Product.java  User.java  UserService.java
tests/fixtures/corpus-full/kotlin/: Services.kt  User.kt
tests/fixtures/corpus-full/python/: api.py  auth.py  cache.py  config.py  db.py  main.py  middleware.py  models.py  services.py  utils.py
tests/fixtures/corpus-full/ruby/: models.rb  services.rb
tests/fixtures/corpus-full/rust/: auth.rs  db.rs  main.rs  models.rs  services.rs
tests/fixtures/corpus-full/shell/: deploy.sh  setup.sh
tests/fixtures/corpus-full/sql/: queries.sql  schema.sql
tests/fixtures/corpus-full/typescript/: api.ts  auth.ts  cache.ts  config.ts  db.ts  index.ts  middleware.ts  models.ts  services.ts  utils.ts
tests/fixtures/sample/: sample.cpp  sample.cs  sample.dm  sample.dmf  sample.dmi  sample.dmm  sample.f90  sample.java
tests/fixtures/single-file/: class.cpp  class.cs  class.kt  class.rb  class_def.py  component.svelte  component.vue  func.c  func.sh  func_def.py  generic.rs  imports.js  imports.py  interface.ts  mcp.json  method.java  package.json  schema.sql  struct.go  struct.swift
tests/harness/src/: main.rs
