[workspace]
resolver = "2"
members = [
    "codesynapse-core",
    "codesynapse-cli",
    "codesynapse-serve",
    "codesynapse-mcp",
    "codesynapse-tui",
    "codesynapse-wasm",
    "codesynapse-grpc",
    "codesynapse-graphql",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sohilladhani/codesynapse"
homepage = "https://github.com/sohilladhani/codesynapse"

[workspace.dependencies]
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
sled = "0.34"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin = "0.3"
tree-sitter-swift = "0.7"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-sql = "0.0"
tree-sitter-bash = "0.25"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"
ignore = "0.4"
walkdir = "2"
rand = "0.8"
regex = "1"
tree-sitter-scala = "0.26"
tree-sitter-dart = "0.2"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1"
tree-sitter-haskell = "0.23"
tree-sitter-groovy = "0.1"
tree-sitter-cmake = "0.7"
tree-sitter-racket = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-pascal = "0.10"
tree-sitter-powershell = "0.26"
tree-sitter-verilog = "1.0"
tree-sitter-fortran = "0.6"
tree-sitter-objc = "3.0"
sha2 = "0.10"
ureq = "2"
toml = "0.8"
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
chrono = "0.4"
dirs = "5"
notify = "6"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
indicatif = "0.17"
console = "0.15"

[profile.release]
strip = true
