[package]
name = "codesynapse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code intelligence MCP server — gives AI coding assistants architecture-level knowledge of your codebase"
keywords = ["mcp", "code-intelligence", "ast", "semantic-search", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "codesynapse"
path = "src/main.rs"

[dependencies]
codesynapse-core = { path = "../codesynapse-core", version = "0.1.1" }
codesynapse-serve = { path = "../codesynapse-serve", version = "0.1.1" }
codesynapse-mcp = { path = "../codesynapse-mcp", version = "0.1.1" }
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
rayon.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
walkdir.workspace = true
indicatif.workspace = true
console.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.deb]
name = "codesynapse"
maintainer = "Sohil Ladhani <sohil@sohilladhani.com>"
assets = [["target/release/codesynapse", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/codesynapse", dest = "/usr/bin/codesynapse", mode = "0755" },
]
