[package]
name = "codesynapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core graph extraction and analysis engine for codesynapse — AST parsing, semantic embeddings, BM25 index"
keywords = ["ast", "code-analysis", "graph", "static-analysis", "embeddings"]
categories = ["development-tools", "data-structures"]

[dependencies]
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rayon.workspace = true
sha2.workspace = true
sled.workspace = true
uuid.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-php.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-sql.workspace = true
tree-sitter-bash.workspace = true
tracing.workspace = true
glob.workspace = true
ignore.workspace = true
walkdir.workspace = true
rand.workspace = true
regex.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-groovy.workspace = true
tree-sitter-cmake.workspace = true
tree-sitter-racket.workspace = true
tree-sitter-julia.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-pascal.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-verilog.workspace = true
tree-sitter-fortran.workspace = true
tree-sitter-objc.workspace = true
toml.workspace = true
ureq.workspace = true
notify.workspace = true
chrono.workspace = true
tempfile.workspace = true
safetensors.workspace = true
tokenizers.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "extraction"
harness = false

[[bench]]
name = "query"
harness = false
