[package]
name = "codesynapse-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-graphql = "7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
