[package]
name = "codesynapse-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server for codesynapse — exposes code intelligence tools to AI coding assistants"
keywords = ["mcp", "code-intelligence", "llm", "ast", "graph"]
categories = ["development-tools", "network-programming"]

[dependencies]
codesynapse-core = { path = "../codesynapse-core", version = "0.1.2" }
codesynapse-serve = { path = "../codesynapse-serve", version = "0.1.2" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
