[package]
name = "codesynapse-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codesynapse-tui"
path = "src/main.rs"

[lib]
name = "codesynapse_tui"
path = "src/lib.rs"

[dependencies]
codesynapse-core = { path = "../codesynapse-core" }
ratatui = "0.29"
crossterm = "0.28"
serde_json.workspace = true
clap.workspace = true
